--- a/css/style.css
+++ b/css/style.css
@@ -550,6 +550,7 @@ main .container .left .profile {
     padding: 3rem;
     border-radius: var(--card-border-radius);
     width: 50%;
+    box-shadow: 0 0 1rem var(--color-primary);
 }
 
 /* Font Size */
@@ -708,6 +709,11 @@ main .container .left .profile {
     .left .btn {
         display: none;
     }
+
+    .customize-theme .card {
+        width: 80vw;
+
+    }
 }
 
 /* ================================================= */
@@ -751,5 +757,9 @@ main .container .left .profile {
 
     main .container .right {
         display: none;
+    }
+
+    .customize-theme .card {
+        width: 92vw;
     }
 } 
